--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,28 @@ a{
     background-color: bisque;
 }
 
+.star-container::before{
+    content: "";
+    display: inline-block;
+    position: absolute;
+    background-color:white;
+    left:25%;
+    bottom: 50%;
+    height: 3px;
+    width: 20%;
+}
+.star-container::after{
+    content: "";
+    display: inline-block;
+    position: absolute;
+    background-color:white;
+    right:25%;
+    bottom: 50%;
+    height: 3px;
+    width: 20%;
+}
+
+
 /* CARDS-SECTION */
 .card{
 
