--- a/css/style.css
+++ b/css/style.css
@@ -90,8 +90,8 @@ a{
 
     /* DEBUG */
     width: 100%;
-    height: 150px;
-    /* manca la width */
+    /* DEBUG */
+    min-height: 200px;
     
 }
 .star-container-dark::before{
